[gd_scene load_steps=12 format=2]

[ext_resource path="res://AbecedarioSinLetra/AbecedarioSinLetra/b.png" type="Texture" id=1]
[ext_resource path="res://AbecedarioSinLetra/AbecedarioSinLetra/c.png" type="Texture" id=3]
[ext_resource path="res://AbecedarioSinLetra/AbecedarioSinLetra/a.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Scripts/Acertijo1.gd" type="Script" id=6]
[ext_resource path="res://MusicAnsSound/Music/Of Far Different Nature - LOOP BOX #3 (CC-BY 4.0)/Of Far Different Nature - Adventure Begins (CC-BY).ogg" type="AudioStream" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.152941, 0.0862745, 0.0862745, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.941176, 0.529412, 0.92549, 1 )
border_color = Color( 0.996078, 0.054902, 0.054902, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.117647, 0.113725, 0.00392157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40
corner_detail = 20
shadow_size = 10
shadow_offset = Vector2( 10, 30 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.545098, 0.0666667, 0.0666667, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="AnimatedTexture" id=6]

[node name="Pregunta" type="Control"]
show_behind_parent = true
use_parent_material = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -516.0
margin_top = -282.0
margin_right = 437.0
margin_bottom = 318.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titulo" type="Label" parent="."]
margin_left = -144.0
margin_top = -203.0
margin_right = 114.0
margin_bottom = -172.0
rect_scale = Vector2( 5, 5 )
custom_styles/normal = SubResource( 1 )
text = "SELECCIONA EL SIGNO CORRECTO PARA 
CONTINUAR CON LA AVENTURA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="textoPregunta" type="Label" parent="."]
margin_left = 72.0
margin_top = 47.0
margin_right = 330.0
margin_bottom = 89.0
rect_scale = Vector2( 3, 3 )
custom_colors/font_color = Color( 0.956863, 0.933333, 0.933333, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 2 )
text = "De los signos de las imagenes,
¿Cuál es la letra A?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 0.92549, 0.117647, 1 )
self_modulate = Color( 0.807843, 1, 0.0392157, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1423.5
margin_top = -586.0
margin_right = 1535.5
margin_bottom = 629.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
margin_left = 518.0
margin_top = 292.0
margin_right = 2395.0
margin_bottom = 1031.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="TextureRect" parent="Panel"]
margin_left = 1300.0
margin_top = 566.0
margin_right = 1339.0
margin_bottom = 602.0
rect_scale = Vector2( 5, 6 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="TextureRect" parent="Panel"]
margin_left = 704.0
margin_top = 550.0
margin_right = 740.0
margin_bottom = 598.0
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="TextureRect" parent="Panel"]
margin_left = 1959.0
margin_top = 562.0
margin_right = 1992.0
margin_bottom = 598.0
rect_scale = Vector2( 5, 6 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonB" type="Button" parent="Panel"]
margin_left = 666.0
margin_top = 889.0
margin_right = 786.0
margin_bottom = 925.0
rect_scale = Vector2( 2.5, 2.5 )
custom_colors/font_color_disabled = Color( 0.878431, 0.384314, 0.384314, 1 )
custom_colors/font_color_focus = Color( 1, 0.654902, 0.654902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 5 )
text = "Escoger"
icon = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonA" type="Button" parent="Panel/BotonB"]
margin_left = 239.6
margin_top = 0.400055
margin_right = 359.6
margin_bottom = 36.4001
custom_colors/font_color_disabled = Color( 0.878431, 0.384314, 0.384314, 1 )
custom_colors/font_color_focus = Color( 1, 0.654902, 0.654902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 5 )
text = "Escoger"
icon = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonC" type="Button" parent="Panel/BotonB"]
margin_left = 493.6
margin_top = -1.19992
margin_right = 613.6
margin_bottom = 34.8
custom_colors/font_color_disabled = Color( 0.878431, 0.384314, 0.384314, 1 )
custom_colors/font_color_focus = Color( 1, 0.654902, 0.654902, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 5 )
text = "Escoger"
icon = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="Panel/BotonB" to="." method="_on_BotonB_pressed"]
[connection signal="pressed" from="Panel/BotonB" to="." method="_on_BotonA_pressed"]
[connection signal="pressed" from="Panel/BotonB/BotonA" to="." method="_on_BotonA_pressed"]
[connection signal="pressed" from="Panel/BotonB/BotonC" to="." method="_on_BotonC_pressed"]
